--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,20 @@ android {
     }
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectName", "titlepage-sender"
+        def jacocoReports = []
+        fileTree("${buildDir}/outputs/code_coverage").forEach({f ->
+            if(f.path.endsWith(".ec") || f.path.endsWith(".exec")){
+                jacocoReports << f
+            }
+        })
+        property "sonar.jacoco.reportPaths", jacocoReports
+        property "sonar.java.test.binaries", "${buildDir}/intermediates/javac/debug/compileDebugJavaWithJavac/classes"
+    }
+}
+
 ext {
     android_support_design_version = "28.0.0"
     androidx_test_rules_version = "1.1.1"
